Revision history for Compression-Util

0.10    2024-08-??

        [ADDITIONS]

        - Added the `mrl_compress()` and `mrl_decompress()` functions, for compressing/decompressing strings.

        [CHANGES]

        - Changed the order of values returned by `lz77_encode()`.
        - Changed the order of arguments accepted by `lz77_decode()`.

        [FIXES]

        - Fixed an issue in `lzb_decompress($fh)`, when there is more data after the LZB block.

0.09    2024-06-26

        - Generalized `make_deflate_tables()` to generate tables for arbitrarily large distances and match lengths.
        - Generalized `deflate_encode()` to encode arbitrarily large distances and arbitrarily large match lengths.
        - Better compression ratio when `$LZ_MAX_DIST` is set to a small value.
        - Minor documentation and performance improvements.

0.08    2024-06-03

        [ADDITIONS]

        - Added the `lzb_compress()` and `lzb_decompress()` functions.
        - Added the `lzss_encode_symbolic()` and `lzss_decode_symbolic()` functions.
        - Added the `lzss_compress_symbolic()` and `lzss_decompress_symbolic()` functions.
        - Added the `$LZ_MAX_DIST` variable, which controls the maximum backreference allowed in LZ parsing.

        [IMPROVEMENTS]

        - Better compression ratio in `lz77_compress()`.

        [CHANGES]

        - Renamed `bz2_compress` and `bz2_decompress` to `bwt_compress` and `bwt_decompress`, respectively.
        - Renamed `$LZSS_MIN_LEN` to `$LZ_MIN_LEN`.
        - Renamed `$LZSS_MAX_LEN` to `$LZ_MAX_LEN`.
        - Removed the `$LZ77_MIN_LEN` and `$LZ77_MAX_LEN` variables. Using `$LZ_MIN_LEN` and `$LZ_MAX_LEN` instead.

0.07    2024-05-12

        - Use the value of `$LZ_MAX_CHAIN_LEN` in `lz77_encode_symbolic()` as well.
        - Added the following package variables:

            $Compression::Util::LZSS_MIN_LEN
            $Compression::Util::LZSS_MAX_LEN
            $Compression::Util::LZ77_MIN_LEN